--- a/src/index.scss
+++ b/src/index.scss
@@ -33,17 +33,48 @@ code {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+html {
+  font-size: 3vw;
 }
 
 .clock {
   display: flex;
   flex-direction: column;
   align-items: center;
+  &__display {
+    margin-bottom: 1em;
+  }
+  &__timeZone {
+    margin-top: 1em;
+  }
+}
+
+.clock-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  &__item {
+    &:first-child {
+      grid-column: 1/3;
+      font-size: 1.5rem;
+      & .clock-face {
+        width: 40vw;
+        height: 40vw;
+      }
+    }
+  }
 }
 
 .clock-face {
-  width: 20vw;
-  height: 20vw;
+  width: 30vw;
+  height: 30vw;
   border-radius: 50%;
   box-shadow: 0 0 2.5vw 0.25vw $mainColor;
   position: relative;
@@ -53,18 +84,27 @@ code {
     position: absolute;
     height: 50%;
     transform-origin: bottom center;
+
     &::before {
       content: '';
       position: absolute;
-      background: rgba($mainColor, 0.7);
-      box-shadow: 0 0 0.35vw rgba($mainColor, 0.5);
+      background-color: rgba($mainColor, 0.3);
+      box-shadow: 0 0 0.35vw rgba($mainColor, 0.3);
       top: 11%;
-      height: 16%;
+      height: 5%;
       width: 100%;
     }
-    @for $i from 1 through 12 {
+
+    &._long::before {
+      background-color: rgba($mainColor, 0.7);
+      box-shadow: 0 0 0.35vw rgba($mainColor, 0.7);
+      height: 16%;
+      top: 7%;
+    }
+
+    @for $i from 1 through 60 {
       &._#{$i} {
-        transform: rotate(#{$i * 30}deg);
+        transform: rotate(#{$i * 6}deg);
       }
     }
   }
@@ -75,6 +115,7 @@ code {
     bottom: 50%;
     border-radius: 100% 100% 0 0;
     transform-origin: bottom center;
+    // transition: transform 0.2s cubic-bezier(1, 2.1, 0.9, 0.35);
     &_hours {
       @include centerBySize(2%);
       height: 25%;
